rust/macros/tests/invalid/target/debug/deps/double_commas-e408e08e9aa47714.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/double_commas-e408e08e9aa47714.d: double_commas.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libdouble_commas-e408e08e9aa47714.rmeta: double_commas.rs Cargo.toml

double_commas.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
